[package]
name = "dasha-web"
version = "0.1.0"
authors = ["William Tange <will@brt.sexy>"]
license = "MIT OR Apache-2.0"
description = "A WebAssembly interface for the dasha disassembler"
repository = "https://github.com/disassemb-ly/dasha-web"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
dasha = { git = "https://github.com/disassemb-ly/dasha", features = ["serde"] }
js-sys = "0.3.50"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
